AUTOMAKE_OPTIONS = gnu

lib_LTLIBRARIES = libSoarKernel.la

libSoarKernel_la_SOURCES = \
agent.h\
callback.h\
chunk.h\
decide.h\
explain.h\
gdatastructs.h\
gski_event_system_data.h\
gski_event_system_functions.h\
gsysparam.h\
init_soar.h\
instantiations.h\
io.h\
kernel.h\
kernel_struct.h\
lexer.h\
mem.h\
parser.h\
print.h\
production.h\
recmem.h\
rete.h\
rhsfun.h\
rhsfun_math.h\
scheduler.h\
soarkernel.h\
symtab.h\
tempmem.h\
trace.h\
wmem.h\
agent.cpp\
backtrace.cpp\
backtrace.h\
callback.cpp\
chunk.cpp\
consistency.cpp\
consistency.h\
debug.cpp\
debug.h\
decide.cpp\
explain.cpp\
hash_table.h\
includes.h\
init_soar.cpp\
interface.cpp\
interface.h\
io.cpp\
kernel_struct.cpp\
lexer.cpp\
ma_interface.cpp\
mem.cpp\
osupport.cpp\
osupport.h\
parser.cpp\
prefmem.cpp\
prefmem.h\
print.cpp\
production.cpp\
recmem.cpp\
reorder.cpp\
reorder.h\
rete.cpp\
rhsfun.cpp\
rhsfun_math.cpp\
scheduler.cpp\
soar.h\
standard.h\
symtab.cpp\
tempmem.cpp\
tilde.cpp\
tilde.h\
trace.cpp\
wmem.cpp

INCLUDES = \
-I.. \
-I../include

AM_CXXFLAGS = $(CUSTOM_CXXFLAGS)
